Adding Event Object UpdateOutput, systemMessage, and UpdateBG

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<body>
 		<div class="container" id="main">
 			<h2 id="title">Welcome to Baka L4D2!</h2>
-			<p id="output"></p>
-			<p id="display">Click Start to start the game!</p>
+			<p id="output" style="height: 10em; overflow: auto;"></p>
+			<h4 id="display">Click Start to start the game!</h4>
 			<div id ="options">
 				<a src="#" class="btn btn-default  btn-success btn-block" onclick="triggerEvent()">Start</a>
 			</div>
